import fonts and main colors

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1>Sonny Says</h1>
+        <p>fgkjkfekjnfkjvndkjvndkjvnekfnknfkdnfer</p>
+        <div id="bunny"></div>
+        <div id="grass"></div>
         <script src="app.js"></script>
     </body>
 </html>
