created basic site layout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     </head>
     <body>
         <h1>Sonny Says</h1>
-        <p>fgkjkfekjnfkjvndkjvndkjvnekfnknfkdnfer</p>
+        <p id="instructions_title">Instructions</p>
+        <section class="instructions">
+            <p>Sonny the Bunny needs your help making an Easter dance. Sonny can move his ears and his feet, but he has trouble remembering what he did.</p> 
+            <p>Help Sonny remember his dance by repeating the sequence of moves each round. Simply click the body parts in the right order when it's your turn.</p>
+        </section>
+        <section class="buttons">
+            <p id="start">Start</p>
+            <p id="counter">1</p>
+        </section>
+        
         <div id="bunny"></div>
         <div id="grass"></div>
         <script src="app.js"></script>
