--- a/index.html
+++ b/index.html
@@ -13,13 +13,28 @@
             <p>Sonny the Bunny needs your help making an Easter dance. Sonny can move his ears and his feet, but he has trouble remembering what he did.</p> 
             <p>Help Sonny remember his dance by repeating the sequence of moves each round. Simply click the body parts in the right order when it's your turn.</p>
         </section>
+        <section class="cloud_container">
+            <div class="cloud c1"></div>
+            <div class="cloud c2"></div>
+            <div class="cloud c3"></div>
+            <div class="cloud c4"></div>
+        </section>
         <section class="buttons">
             <p id="start">Start</p>
             <p id="counter">1</p>
         </section>
-        
         <div id="bunny"></div>
-        <div id="grass"></div>
+        <section class="ground_container">
+            <div class="grass_container">
+                <div class="grass g1"></div>
+                <div class="grass g2"></div>
+                <div class="grass g3"></div>
+                <div class="grass g4"></div>
+            </div>
+            <div id="ground">
+                <p>Created by <a href="https://github.com/llouison">Lisa</a></p>
+            </div>
+        </section>
         <script src="app.js"></script>
     </body>
 </html>
