--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <div class="right_ear">
                 <div class="right_innerear"></div>
             </div>
-            <div class="bunny_body"></div>
+            <div class="bunny_body">
+                <div class="egg"></div>
+            </div>
             <div class="bunny_head">
                 <div class="left_eye"></div>
                 <div class="right_eye"></div>
