created paws and animation

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             </div>
             <div class="bunny_body">
                 <div class="egg"></div>
+                <div class="left_paw"></div>
+                <div class="right_paw"></div>
             </div>
             <div class="bunny_head">
                 <div class="left_eye"></div>
