--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <h1>Sonny Says</h1>
-        <p id="instructions_label">Instructions</p>
-        <section class="instructions">
+        <p id="instructions">Instructions</p>
+        <section class="instructions_text">
             <p>Sonny the Bunny needs your help making an Easter dance. Sonny can move his ears and his feet, but he has trouble remembering what he did.</p> 
             <p>Help Sonny remember his dance by repeating the sequence of moves each round. Simply click the body parts in the right order when it's your turn.</p>
         </section>
