created start game function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Sonny Says</h1>
         <p id="instructions">Instructions</p>
-        <section class="instructions_text">
+        <section class="instructions_text" style="display:none">
             <p>Sonny the Bunny needs your help making an Easter dance. Sonny can move his ears, his paws and his feet, but he has trouble remembering what he did.</p> 
             <p>Help Sonny remember his dance by repeating the sequence of moves each round. Simply click the body parts in the right order when it's your turn.</p>
         </section>
