created restart button

--- a/index.html
+++ b/index.html
@@ -22,26 +22,27 @@
         <section class="buttons">
             <p id="start">Start</p>
             <p id="counter">1</p>
+            <p id="restart">Restart</p>
         </section>
         <div id="bunny">
-            <div class="left_ear">
+            <div id="left_ear">
                 <div class="left_innerear"></div>
             </div>
-            <div class="right_ear">
+            <div id="right_ear">
                 <div class="right_innerear"></div>
             </div>
             <div class="bunny_body">
                 <div class="egg"></div>
-                <div class="left_paw"></div>
-                <div class="right_paw"></div>
+                <div id="left_paw"></div>
+                <div id="right_paw"></div>
             </div>
             <div class="bunny_head">
                 <div class="left_eye"></div>
                 <div class="right_eye"></div>
                 <div class="nose"></div>
             </div>
-            <div class="left_leg"></div>
-            <div class="right_leg"></div>
+            <div id="left_leg"></div>
+            <div id="right_leg"></div>
 
         </div>
         <section class="ground_container">
