--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p id="instructions">Instructions</p>
         <section class="instructions_text" style="display:none">
             <p>Sonny the Bunny needs your help making an Easter dance. Sonny can move his ears, his paws and his feet, but he has trouble remembering what he did.</p> 
-            <p>Help Sonny remember his dance by repeating the sequence of moves each round. Simply click the body parts in the right order when it's your turn.</p>
+            <p>Help Sonny remember his dance by repeating the sequence of moves each round. Simply click the body parts in the right order when it's your turn. Get all 10 moves and you win!</p>
         </section>
         <section class="cloud_container">
             <div class="cloud c1"></div>
