updated playround function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </section>
         <section class="buttons">
             <p id="start">Start</p>
-            <p id="counter">1</p>
+            <p id="display">1</p>
             <p id="restart">Restart</p>
         </section>
         <div id="bunny">
