removed inner ear divs

--- a/index.html
+++ b/index.html
@@ -25,12 +25,8 @@
             <p id="restart">Restart</p>
         </section>
         <div id="bunny">
-            <div id="left_ear">
-                <div class="left_innerear"></div>
-            </div>
-            <div id="right_ear">
-                <div class="right_innerear"></div>
-            </div>
+            <div id="left_ear"></div>
+            <div id="right_ear"></div>
             <div class="bunny_body">
                 <div class="egg"></div>
                 <div id="left_paw"></div>
