fixed bunny centering problem

--- a/index.html
+++ b/index.html
@@ -23,31 +23,30 @@
             <p id="start">Start</p>
             <p id="display">1</p>
         </section>
-        <div id="bunny">
-            <div id="left_ear"></div>
-            <div id="right_ear"></div>
-            <div class="bunny_body">
-                <div class="egg"></div>
-                <div id="left_paw"></div>
-                <div id="right_paw"></div>
+        <section class="bunny_container">
+            <div id="bunny">
+                <div id="left_ear"></div>
+                <div id="right_ear"></div>
+                <div class="bunny_body">
+                    <div class="egg"></div>
+                    <div id="left_paw"></div>
+                    <div id="right_paw"></div>
+                </div>
+                <div class="bunny_head">
+                    <div class="left_eye"></div>
+                    <div class="right_eye"></div>
+                    <div class="nose"></div>
+                </div>
+                <div id="left_leg"></div>
+                <div id="right_leg"></div>
             </div>
-            <div class="bunny_head">
-                <div class="left_eye"></div>
-                <div class="right_eye"></div>
-                <div class="nose"></div>
-            </div>
-            <div id="left_leg"></div>
-            <div id="right_leg"></div>
-
-        </div>
+        </section>
         <section class="ground_container">
-            <div class="grass_container">
+            <div id="ground">
                 <div class="grass g1"></div>
                 <div class="grass g2"></div>
                 <div class="grass g3"></div>
                 <div class="grass g4"></div>
-            </div>
-            <div id="ground">
                 <p>Created by <a href="https://github.com/llouison" target="_blank">Lisa</a></p>
             </div>
         </section>
