--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
     <head>
         <title>Sonny Says</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="assets/favicon.ico" 
         <link rel="stylesheet" href="reset.css">
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Rancho" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Sonny Says</h1>
-        <p id="instructions">Instructions</p>
+        <p id="instructions">Help</p>
         <section class="instructions_text" style="display:none">
-            <p>Sonny the Bunny needs your help making an Easter dance. Sonny can move his ears, his paws and his feet, but he has trouble remembering what he did.</p> 
-            <p>Help Sonny remember his dance by repeating the sequence of moves each round. Simply click the body parts in the right order when it's your turn. Get all 10 moves and you win!</p>
+            <p>Sonny the Bunny needs your help making an Easter dance. Sonny can move his ears, his paws and his feet.</p> 
+            <p>Help Sonny remember his dance by repeating the sequence of moves each round.</p> 
+            <p>Simply click the body parts in the right order when it's your turn. Get all 10 moves and you win!</p>
         </section>
         <section class="cloud_container">
             <div class="cloud c1"></div>
